--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
+		"date-fns": "^3.6.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-datepicker": "^7.3.0",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
