Creacion de enlaces entre vistas

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-bootstrap": "^2.10.4",
 		"react-datepicker": "^7.3.0",
 		"react-dom": "^16.8.4",
+		"react-modal": "^3.16.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
